addu completado e removeu iniciado